# CutPilot-Windows

./: .env.example  .gitignore  CUTPILOT_CONTEXT.md  CutPilot.spec  README.md  admin_tools.py  build.py  install.bat  install.sh  main.py  main_webui.py  pyproject.toml  requirements.txt
config/: sensitive_words.json
config/prompts/: inspector.md  sentence_selector.md
config/prompts/categories/: clothing.md  makeup.md  skincare.md  wig.md
core/: ai_client.py  asr.py  bridge_api.py  cache_manager.py  category_detector.py  config.py  director.py  editor.py  history.py  hwaccel.py  inspector.py  license.py  models.py  overlay.py  paths.py  pipeline.py  providers.py  subprocess_utils.py  text_render.py  user_settings.py  window.py
docs/: 2026-03-24-cutpilot-mvp-design.md  IMPLEMENTATION_PLAN.md  manual_test_checklist.md
scripts/: build.py  setup-mac.sh  setup-windows.bat
tests/: test_ai_client.py  test_asr.py  test_cache_manager.py  test_category_detector.py  test_director.py  test_editor.py  test_history.py  test_hwaccel.py  test_inspector.py  test_license.py  test_models.py  test_overlay.py  test_pipeline.py  test_providers.py  test_user_settings.py
tools/: generate_license.py
ui/: activation_dialog.py  drop_zone.py  history_dialog.py  main_window.py  result_panel.py  settings_dialog.py  styles.py  worker.py
webui/: index.html  package-lock.json  package.json  tailwind.config.js
webui/src/: App.vue  bridge.ts  main.ts
webui/src/assets/: theme.css
webui/src/components/: SideNav.vue  TopBar.vue
webui/src/router/: index.ts
(+7 files in other folders)
